# nutty

./: .travis.yml  CMakeLists.txt  Dockerfile  FLATPAK BUILD.md  Flatpak Build Instructions.md  README.md  build-nutty.sh  com.github.babluboy.nutty.json  com.github.babluboy.nutty.yaml  index.html  meson.build  snapcraft.yaml
.bzr/branch/: branch.conf  last-revision
.bzr/checkout/: dirstate
.bzr/repository/: pack-names
css/: header.css
data/: com.github.babluboy.nutty.appdata.xml  com.github.babluboy.nutty.appdata.xml.in  com.github.babluboy.nutty.desktop  com.github.babluboy.nutty.desktop.in  com.github.babluboy.nutty.gresource.xml  com.github.babluboy.nutty.gschema.xml  meson.build  nutty.desktop
data/scripts/: meson.build  nutty_cli_script.sh  nutty_device_alert.sh  nutty_device_monitor.sh  nutty_nethogs_script.sh  nutty_nmap_script.sh  nutty_ports_script.sh  nutty_traceroute_script.sh  nutty_vnstat_script.sh  org.freedesktop.policykit.nutty.policy  org.freedesktop.policykit.nutty.policy.in  speedtest-cli
debian/: changelog  control  copyright
flatpak/: com.github.babluboy.nutty.json
po/: POTFILES  ar.po  ay.po  az.po  ba.po  be.po  bg.po  ca.po  com.github.babluboy.nutty.pot  cs.po  da.po  de.po  dv.po  eo.po  es.po  es_MX.po  et.po  eu.po  fi.po  fo.po  fr.po  fr_CA.po  gd.po  he.po  ho.po  hr.po  hu.po  hy.po  hz.po  ia.po  id.po  is.po  it.po  ja.po  kj.po  km.po  ko.po  ku.po  kv.po  lb.po  (+37 more)
polkit/: com.example.nutty.policy
setup/gui/: nutty.desktop
src/: constants.vala  constants.vala.in  database.vala  devices.vala  entities.vala  headerbar.vala  info.vala  main.vala  meson.build  nutty.vala  settings.vala  shortcuts.vala  utils.vala  window.vala  xmlHandler.vala
